[package]
name = "crates-sgx"
version = "0.1.0"
authors = ["Teaclave Contributors"]
edition = "2018"

[dependencies]
# SGX helper
profiler_builtins              = { git = "https://github.com/mesalock-linux/sgx-fake-profiler-builtins" }

# Rust SGX SDK
sgx_align_struct_attribute     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_alloc                      = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_backtrace                  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_backtrace_sys              = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_build_helper               = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_cov                        = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_libc                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_rand                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_rand_derive                = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_serialize                  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_serialize_derive           = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_serialize_derive_internals = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tcrypto                    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tcrypto_helper             = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tdh                        = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tkey_exchange              = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tprotected_fs              = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_trts                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tse                        = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tseal                      = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tstd                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tunittest                  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_types                      = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_unwind                     = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts                       = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

# SGX crates
adler32          = { git = "https://github.com/mesalock-linux/adler32-rs-sgx"}
aho-corasick     = { git = "https://github.com/mesalock-linux/aho-corasick-sgx" }
anyhow           = { git = "https://github.com/mesalock-linux/anyhow-sgx" }
array_tool       = { git = "https://github.com/mesalock-linux/array_tool-sgx", tag = "sgx_1.1.3" }
base64           = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
bincode          = { git = "https://github.com/mesalock-linux/bincode-sgx", tag = "v1.1.3" }
byteorder        = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
bytes            = { git = "https://github.com/mesalock-linux/bytes-sgx", tag = "sgx_1.1.3" }
chrono           = { git = "https://github.com/mesalock-linux/chrono-sgx", tag = "sgx_1.1.3" }
color_quant      = { git = "https://github.com/mesalock-linux/color_quant-sgx", tag = "sgx_1.1.3" }
crc              = { git = "https://github.com/mesalock-linux/crc-rs-sgx", tag = "sgx_1.1.3" }
crc32fast        = { git = "https://github.com/mesalock-linux/rust-crc32fast-sgx", tag = "sgx_1.1.3" }
deflate          = { git = "https://github.com/mesalock-linux/deflate-rs-sgx", tag = "sgx_1.1.3" }
env_logger       = { git = "https://github.com/mesalock-linux/env_logger-sgx", tag = "sgx_1.1.3" }
gbdt             = { git = "https://github.com/mesalock-linux/gbdt-rs", branch = "mesatee-sgx", features = ["input", "enable_training"] }
getrandom        = { git = "https://github.com/mesalock-linux/getrandom-sgx", tag = "sgx_1.1.3" }
gif              = { git = "https://github.com/mesalock-linux/image-gif-sgx", tag = "sgx_1.1.3" }
gzip-header      = { git = "https://github.com/mesalock-linux/gzip-header-sgx", tag = "sgx_1.1.3" }
heapsize         = { git = "https://github.com/mesalock-linux/heapsize-sgx", tag = "sgx_1.1.3" }
hex              = { git = "https://github.com/mesalock-linux/rust-hex-sgx", tag = "sgx_1.1.3" }
http             = { git = "https://github.com/mesalock-linux/http-sgx", tag = "sgx_1.1.3" }
image            = { git = "https://github.com/mesalock-linux/image-sgx", tag = "sgx_1.1.3" }
inflate          = { git = "https://github.com/mesalock-linux/inflate-sgx", tag = "sgx_1.1.3" }
integer-encoding = { git = "https://github.com/mesalock-linux/integer-encoding-rs-sgx", tag = "sgx_1.1.3" }
iovec            = { git = "https://github.com/mesalock-linux/iovec-sgx", tag = "sgx_1.1.3" }
itoa             = { git = "https://github.com/mesalock-linux/itoa-sgx", tag = "sgx_1.1.3" }
jpeg-decoder     = { git = "https://github.com/mesalock-linux/jpeg-decoder-sgx", tag = "sgx_1.1.3" }
jsonwebtoken     = { git = "https://github.com/mesalock-linux/jsonwebtoken-sgx", tag = "sgx_1.1.3" }
linked-hash-map  = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx", tag = "sgx_1.1.3" }
log              = { git = "https://github.com/mesalock-linux/log-sgx", tag = "sgx_1.1.3" }
lzw              = { git = "https://github.com/mesalock-linux/lzw-sgx", tag = "sgx_1.1.3" }
matrixmultiply   = { git = "https://github.com/mesalock-linux/matrixmultiply-sgx", tag = "sgx_1.1.3" }
md5              = { git = "https://github.com/mesalock-linux/md5-sgx", tag = "sgx_1.1.3" }
mio              = { git = "https://github.com/mesalock-linux/mio-sgx", tag = "sgx_1.1.3" }
net2             = { git = "https://github.com/mesalock-linux/net2-rs-sgx", tag = "sgx_1.1.3" }
num-bigint       = { git = "https://github.com/mesalock-linux/num-bigint-sgx", tag = "sgx_1.1.3" }
num-traits       = { git = "https://github.com/mesalock-linux/num-traits-sgx", tag = "sgx_1.1.3" }
parity-wasm      = { git = "https://github.com/mesalock-linux/parity-wasm-sgx", tag = "sgx_1.1.3" }
percent-encoding = { git = "https://github.com/mesalock-linux/rust-url-sgx", tag ="sgx_1.1.3" }
png              = { git = "https://github.com/mesalock-linux/image-png-sgx", tag = "sgx_1.1.3" }
prost            = { git = "https://github.com/mesalock-linux/prost-sgx", tag = "sgx_1.1.3" }
quick-error      = { git = "https://github.com/mesalock-linux/quick-error-sgx", tag = "sgx_1.1.3" }
rand             = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.3" }
rdrand           = { git = "https://github.com/mesalock-linux/rust_rdrand-sgx", tag = "sgx_1.1.3" }
regex            = { git = "https://github.com/mesalock-linux/regex-sgx", tag = "sgx_1.1.3" }
ring             = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
rulinalg         = { git = "https://github.com/mesalock-linux/rulinalg-sgx", tag = "sgx_1.1.3" }
rustface         = { git = "https://github.com/yilinhan/rustface-sgx", branch = "v1.1.3" }
rustls           = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx-client-cert-verifier-patch" }
rusty-machine    = { git = "https://github.com/mesalock-linux/rusty-machine-sgx", tag = "sgx_1.1.3" }
sct              = { git = "https://github.com/mesalock-linux/sct.rs", branch = "mesalock_sgx" }
serde            = { git = "https://github.com/mesalock-linux/serde-sgx", tag = "sgx_1.1.3" }
serde_cbor       = { git = "https://github.com/mesalock-linux/cbor-sgx", tag = "sgx_1.1.3" }
serde_derive     = { git = "https://github.com/mesalock-linux/serde-sgx", tag = "sgx_1.1.3" }
serde_json       = { git = "https://github.com/mesalock-linux/serde-json-sgx", tag = "sgx_1.1.3" }
sha-1            = { git = "https://github.com/mesalock-linux/hashes-sgx", tag = "sgx_1.1.3" }
sha1             = { git = "https://github.com/mesalock-linux/rust-sha1-sgx", tag = "sgx_1.1.3" }
sha2             = { git = "https://github.com/mesalock-linux/hashes-sgx", tag = "sgx_1.1.3" }
snap             = { git = "https://github.com/mesalock-linux/rust-snappy-sgx", tag = "sgx_1.1.3" }
thiserror        = { git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3" }
threadpool       = { git = "https://github.com/mesalock-linux/rust-threadpool-sgx", tag = "sgx_1.1.3" }
tiff             = { git = "https://github.com/mesalock-linux/image-tiff-sgx", tag ="sgx_1.1.3" }
toml             = { git = "https://github.com/mesalock-linux/toml-rs-sgx", tag = "sgx_1.1.3" }
url              = { git = "https://github.com/mesalock-linux/rust-url-sgx", tag ="sgx_1.1.3" }
uuid             = { git = "https://github.com/mesalock-linux/uuid-sgx", tag = "sgx_1.1.3" }
wabt             = { git = "https://github.com/mesalock-linux/wabt-rs-sgx", branch = "v0.9-core" }
wasmi            = { git = "https://github.com/mesalock-linux/wasmi-sgx", tag = "sgx_1.1.3" }
webpki           = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots     = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna            = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", tag = "sgx_1.1.3" }

# no_std crates
assert_matches = { version = "1.3.0" }
bit-vec        = { version = "0.6.1", default-feature = false }
cfg-if         = "0.1.9"
httparse       = { version = "1.3.4", default-features=false }
itertools      = { version = "0.8.0", default-features = false }
inventory      = { version = "0.1.6" }
lazy_static    = { version = "1.4.0", features = ["spin_no_std"] }
quote          = "0.6"
syn            = "0.15"
untrusted      = { version = "0.7.0" }

[workspace]